# Music_Streaming_System

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: .env.example  (+4 more)
apps/worker/: .env.example  Cargo.toml  build.rs  package.json  tsconfig.json
apps/worker/scripts/: run-mood-analyzer.cmd
apps/worker/src/: app.module.ts  main.rs  main.ts  mood_analysis.rs  transcode.processor.ts
apps/worker/src/cloudflare/: kv.rs
apps/worker/src/config/: config.rs
apps/worker/src/crypto/: aes.rs  kdf.rs
apps/worker/src/job/: handler.rs
apps/worker/src/kms/: client.rs  kms.module.ts  kms.service.ts
apps/worker/src/metadata/: client.rs
apps/worker/src/observability/: log.rs  metrics.rs
apps/worker/src/pipeline/: context.rs  ingest.rs  mod.rs
apps/worker/src/pipeline/steps/: download.rs  encrypt.rs  metadata.rs  mod.rs  transcode.rs  upload.rs
apps/worker/src/pipeline/steps/transcode/: mod.rs  stream_index.rs  uploader.rs  waveform.rs
apps/worker/src/proto/: mod.rs
apps/worker/src/queue/: consumer.rs  job.rs  mod.rs
apps/worker/src/r2/: client.rs
apps/worker/src/redis/: client.rs  mod.rs
apps/worker/src/storage/: storage.service.ts
apps/worker/src/transcoder/: ffmpeg.rs
doc/: API_DOCUMENTATION.md  API_ROADMAP_2_WEEKS.md  ARCHITECTURE.md  CI_CD_SETUP.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  ENVIRONMENT.md  MONOREPO_GUIDE.md  QUICK_START.md  README.md  SECURITY.md  SYSTEM_OVERVIEW.md  TECH_STACK.md  TEST_FLOW.md  TROUBLESHOOTING.md
(+485 files in other folders)
