[package]
name = "worker"
version = "1.0.0"
edition = "2024"

[dependencies]
tonic = { version = "0.12.3", features = ["transport", "codegen", "prost"] }
prost = "0.13.5"
http = "1.0"
http-body = "1.0"
tokio = { version = "1.0", features = ["full"] }
bytes = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-rustls = "0.26"
redis = { version = "0.24.0", features = ["aio", "tokio-comp"] }
urlencoding = "2.1.3"
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = "0.3"
futures-core = "0.3"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
rand = "0.8"
aws-config = "1"
aws-sdk-s3 = "1"
base64 = "0.22"

[build-dependencies]
tonic-build = "0.12.3"
prost-build = "0.13.5"
protoc-bin-vendored = "3"